# beautiful-repo

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: validate.yml
skills/beautiful-dl-repo/: SKILL.md
skills/beautiful-dl-repo/agents/: openai.yaml
skills/beautiful-dl-repo/assets/readme-templates/: visual-research-readme.md
skills/beautiful-dl-repo/references/: readme-standard.md  sources-reviewed.md
skills/beautiful-dl-repo/scripts/: audit_dl_repo.py
skills/beautiful-repo/: SKILL.md
skills/beautiful-repo/agents/: openai.yaml
skills/beautiful-repo/assets/readme-templates/: visual-research-readme.md
skills/beautiful-repo/references/: code-style-standard.md  docstring-standard.md  framework-notes.md  high-impact-patterns.md  migration-playbook.md  naming-standard.md  readme-standard.md  repo-type-playbooks.md  research-release-standard.md  sources-reviewed.md
skills/beautiful-repo/scripts/: audit_dl_repo.py
skills/deeprepo-forge/: SKILL.md
skills/deeprepo-forge/agents/: openai.yaml
skills/deeprepo-forge/assets/readme-templates/: visual-research-readme.md
skills/deeprepo-forge/references/: code-style-standard.md  high-impact-patterns.md  readme-standard.md  sources-reviewed.md
skills/deeprepo-forge/scripts/: audit_dl_repo.py
skills/standardize-dl-repo/: SKILL.md
skills/standardize-dl-repo/agents/: openai.yaml
skills/standardize-dl-repo/references/: migration-playbook.md  readme-standard.md
skills/standardize-dl-repo/scripts/: audit_dl_repo.py
tests/: test_audit_dl_repo.py
