[project]
name = "beautiful-dl-repo-kit"
version = "0.1.0"
description = "Codex skill kit for making deep learning research repositories visual, reproducible, and citation-ready."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
